--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ go:
   - 1.11.x
   - master
 
-script: go build -o fisy ${gobuild_args} cmd/fisy/*.go
+script: go generate -v -x cmd/fisy/*.go && go build -o fisy ${gobuild_args} cmd/fisy/*.go
