--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: go
 
+# From https://gist.github.com/petrbel/c3bf7e0f59c22a52f534
+git:
+  submodules: false
+
+before_install:
+  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  - git submodule update --init --recursive
+
 go:
   - 1.11.x
   - master
