--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "github.com/pkg/sftp"]
-	path = vendor/github.com/pkg/sftp
+	path = vendored/github.com/pkg/sftp
 	url = git@github.com:tommie/sftp
 	branch = hardlink
